--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,13 +7,13 @@
 
 <div>
   <h3>
-    Name: <span id="personName">{{(agePrediction$ | async).name}}</span>
+    Name: <span id="personName">{{(agePrediction$ | async)?.name}}</span>
   </h3>
 </div>
 
 <div>
   <h3>
-    Age: <span id="personAge">{{(agePrediction$ | async).age}}</span>
+    Age: <span id="personAge">{{(agePrediction$ | async)?.age}}</span>
   </h3>
 </div>
 
